# CXYNN

./: CMakeLists.txt  CXYNeuronNetwork.h  Common.cpp  Common.h  ConvLayer.cpp  ConvLayer.h  DenseLayer.cpp  DenseLayer.h  DropoutLayer.cpp  DropoutLayer.h  Estimator.cpp  Estimator.h  Fiber.cpp  Fiber.h  FuncAbstractor.cpp  FuncAbstractor.h  LICENSE  Layer.cpp  Layer.h  Main.cpp  Makefile  Matrix.h  MaxPoolLayer.cpp  MaxPoolLayer.h  MemoryControl.cpp  MemoryControl.h  Neuron.cpp  Neuron.h  Optimizer.cpp  Optimizer.h  PoolLayer.cpp  PoolLayer.h  Predictor.cpp  Predictor.h  README.md  config.h.in
cuda/: CMakeLists.txt  kernels.cu  kernels.h
